# webscraping-example

./: .flake8  .gitignore  README.md  pyproject.toml
webscraping-example/: webscraping_f1.py  webscraping_nba.py
