[tool.poetry]
name = "webscraping-example"
version = "0.1.0"
description = ""
authors = ["Mário Victor Ribeiro Silva <mariovictorrs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
selenium = "^4.0.0"
lxml = "^4.6.5"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"
pylint = "^2.11.1"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
